--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,9 +28,17 @@
         <h1 th:if="${role == 'user'}">Your Animals</h1>
         <h1 th:if="${role == 'admin'}">All Animals</h1>
         <a th:href="@{/showNewAnimalForm}" class="btn btn-primary btn-sm mb-3"> Add Animal </a>
+        <form th:action="@{/search}" method="get">
+          <input th:if="${role == 'user'}" type="text" name="keyword" th:value="${keyword}"  placeholder="Find by Animal Name" size="50" />
+          <input th:if="${role == 'admin'}" type="text" name="keyword" th:value="${keyword}"  placeholder="Find by Animal Name or Owner Name" size="50" >
+          <button type="submit" class="btn btn-info">Search</button>
+          <a th:href="@{/}" class="btn btn-info" >Reset</a>
+        </form>
+
         <table border="1" class = "table table-striped table-responsive-md">
             <thead>
             <tr>
+                <th th:if="${role == 'admin'}">Owner Name</th>
                 <th>Animal Name</th>
                 <th>Animal Type</th>
                 <th>Animal Age</th>
@@ -41,6 +49,7 @@
             </thead>
             <tbody>
             <tr th:each="animal : ${listAnimals}">
+                <td th:if="${role == 'admin'}" th:text="${animal.getOwner().getFirstName() +' '+ animal.getOwner().getLastName()}"></td>
                 <td th:text="${animal.getName()}"></td>
                 <td th:text="${animal.getType()}"></td>
                 <td th:text="${animal.getAge()}"></td>
