--- a/src/main/resources/templates/new_animal.html
+++ b/src/main/resources/templates/new_animal.html
@@ -28,6 +28,11 @@
 
           <form action="#" th:action="@{/saveAnimal}" th:object="${animal}" method="POST">
 
+              <div th:if="${role == 'admin'}">
+                  <label for="animal">Owner Email</label>
+                  <input type="text" id="animal" th:field="*{owner.email}" placeholder="Owner Email" class="form-control mb-4 col-4" required="required">
+              </div>
+
               <label for="name">Animal Name</label>
               <input type="text" id="name" th:field="*{name}" placeholder="Animal Name" class="form-control mb-4 col-4">
 
